op/console/src/web/resource.css
/**
 *  Copyright 2024 Red Hat
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *      https://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 */

.hal-m-data, .hal-m-attributes, .hal-m-operations {
    padding-top: var(--pf-t--global--spacer--md);
}

.hal-c-resource .hal-c-resource__view, .hal-c-resource .hal-c-resource__form, .hal-c-finder__preview .hal-c-resource__view {
    --hal-resource-label-width-on-md: 20ch;
    --hal-resource-label-width-on-lg: 23ch;
    --hal-resource-label-width-on-xl: 25ch;
    --hal-resource-label-width-on-2xl: 28ch;
}

.hal-c-resource__nested-label {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    align-self: baseline;
}

.hal-c-resource__stability-level {
    align-content: center;
    align-items: baseline;
    display: flex;
}

.hal-c-resource__body {
    margin-top: var(--pf-t--global--spacer--md);
}

.hal-c-resource__form {
    --pf-v6-c-form--m-horizontal__group-label--md--GridColumnWidth: var(--hal-resource-label-width-on-md);
}

.hal-c-resource__form-expression-switch {
    gap: var(--pf-t--global--spacer--gap--control-to-control--default);
    min-height: calc(var(--pf-t--global--font--size--md) * var(--pf-t--global--font--line-height--body) + 2 * var(--pf-t--global--spacer--xs));
}

.hal-c-resource__view {
    --pf-v6-c-description-list__group--ColumnGap: var(--pf-t--global--spacer--md);
    --pf-v6-c-description-list--m-horizontal__term--width-on-md: var(--hal-resource-label-width-on-md);
    --pf-v6-c-description-list--m-horizontal__term--width-on-lg: var(--hal-resource-label-width-on-lg);
    --pf-v6-c-description-list--m-horizontal__term--width-on-xl: var(--hal-resource-label-width-on-xl);
    --pf-v6-c-description-list--m-horizontal__term--width-on-2xl: var(--hal-resource-label-width-on-2xl);
}

.hal-c-resource__view-unit {
    color: var(--pf-t--global--text--color--200);
    font-size: var(--pf-t--global--font--size--sm);
    margin-left: var(--pf-t--global--spacer--sm);
}

.hal-c-resource__view-undefined {
    color: var(--pf-t--global--text--color--disabled);
}

@media (min-width: 992px) {
    .hal-c-resource__form {
        --pf-v6-c-form--m-horizontal__group-label--md--GridColumnWidth: var(--hal-resource-label-width-on-lg);
    }
}

@media (min-width: 1200px) {
    .hal-c-resource__form {
        --pf-v6-c-form--m-horizontal__group-label--md--GridColumnWidth: var(--hal-resource-label-width-on-xl);
    }
}

@media (min-width: 1450px) {
    .hal-c-resource__form {
        --pf-v6-c-form--m-horizontal__group-label--md--GridColumnWidth: var(--hal-resource-label-width-on-2xl);
    }
}

